Hello World with StimulusJS

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,10 @@
+<div data-controller="hello">
+  <button data-action="hello#addHelloWorld">Click me</button>
+  <ul data-target="hello.list">
+    <li>Hello World Stimulus.js Start</li>
+  </ul>
+</div>
+
 <h1>Hello world!</h1>
 <div id="hello_world"></div>
 <button id="click_me_button">Click me</button>
