--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -10,3 +10,5 @@
   <%= render partial: 'quote', collection: @quotes %> 
 </ul>
 <h1><%= @quotes.count %>
+
+<%= react_component 'ReactQuotesApp' %>
